# wireguard-client

./: .gitignore  Cargo.toml  LICENSE  README.md  client_keys.ron  index.d.ts  index.js  package.json  wg_server.ron
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  lib_main.rs
