[package]
edition = "2021"
name = "wireguard-client"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.2.0", default-features = false, features = ["napi4"] }
napi-derive = "2.2.0"
boringtun = "0.3.0"
reqwest = {default-features = false, version = "0.11", features = ["blocking", "json", "rustls-tls"]}
serde = {version = "1", features = ["derive", "std"]}
base64 = "0.13"
serde_json = "1.0.64"
ron = "0.6.4"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
